--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700);
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*--------------------------------------------Colors*/
 
@@ -28,6 +28,11 @@
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+    
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6;
 }
 
 /*--------------------------------------------Special Paddings/Margins/Text*/
@@ -62,13 +67,21 @@ h4 {
 .row-table {
     display: table;
 }
-
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+.history-heading{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+    color: #fafafa
+}
+
+
 /*--------------------------------------------Heading*/
 
 header {
@@ -80,7 +93,7 @@ header {
 }
 
 .logo {
-    background: url("../images/.jpg");
+    background: url("../images/SJM.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -261,5 +274,70 @@ footer .cv-pdf i:hover {
     padding: 0 30px 30px;
     float: none;
     display: table-cell; 
+}
+
+/*--------------------------------------------Skills*/
+
+.progress{
+    position: relative;
+    height:25px;
+    
+}
+
+.progress-type{
+    position: absolute;
+    left:0px;
+    font-weight:400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25,0.2);
+}
+
+.progress-section{
+    margin: 40px 20px;
+    
+}
+/*------------------------------------------work history*/
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::before{
+    content: attr(dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo",sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-heading{
+    color:#fafafa;
+    margin-bottom: 50px;
 }
 
