--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,7 @@
 }
 
 .bg-color-personal-info {
-    background-color: #f4f4f4;
-    
+    background-color: #fafafa;
 }
 
 .bg-color-work-history {
@@ -58,30 +57,16 @@ h4 {
     display: inline-block;
 }
 
-.section-column {
-    padding: 0 30px 30px;
-    float: none;
-    display: table-cell;
-}
-
 .row-table {
     display: table;
 }
+
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
-.history-heading{
-    font-family: "Exo", sans-serif;
-    font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 40px;
-    color: #fafafa
-}
-
-
 /*--------------------------------------------Heading*/
 
 header {
@@ -100,8 +85,7 @@ header {
     min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out
-   
+    -webkit-transition: all .5s ease-in-out;
 }
 
 .name {
@@ -265,41 +249,28 @@ footer .cv-pdf i:hover {
     width: 60%;
 }
 
-
-
-/*--------------------------------------------Media Queries*/
-@media(min-width:992px){
-  
-.section-column {
-    padding: 0 30px 30px;
-    float: none;
-    display: table-cell; 
-}
-
 /*--------------------------------------------Skills*/
 
-.progress{
+.progress {
     position: relative;
-    height:25px;
-    
+    height: 25px;
 }
 
-.progress-type{
+.progress-type {
     position: absolute;
-    left:0px;
-    font-weight:400;
+    left: 0px;
+    font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25,25,25,0.2);
+    background-color: rgba(25, 25, 25, 0.2);
 }
 
-.progress-section{
+.progress-section {
     margin: 40px 20px;
-    
 }
-/*------------------------------------------work history*/
 
-.timeline-item{
+/*--------------------------------------------Work History*/
+.timeline-item {
     padding: 4em 2em 0em 2em;
     position: relative;
     color: #fafafa;
@@ -311,20 +282,20 @@ footer .cv-pdf i:hover {
     margin: 0;
 }
 
-.timeline-item::before{
+.timeline-item::before {
     content: attr(dates);
     position: absolute;
     left: 2.5em;
     top: 3em;
     display: block;
-    font-family: "Exo",sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 500;
     font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item::after{
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -333,11 +304,54 @@ footer .cv-pdf i:hover {
     left: -6px;
     border-radius: 12px;
     content: '';
-    background-color: #fafafa;
+    background: #fafafa;
 }
 
-.history-heading{
-    color:#fafafa;
+.history-heading {
+    color: #fafafa;
     margin-bottom: 50px;
 }
 
+.history-items {
+    margin-bottom: 30px;
+}
+
+/*--------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
+}
